# jackal-utilities

./: .gitmodules  CMakeLists.txt  README.md
meta/doxy/: CMakeLists.txt  Doxyfile.in
src/jkutil/: CMakeLists.txt  aligned.h  allocator.cpp  allocator.h  allocator_pointer.h  allocator_reference.h  any_derived.h  array_proxy.h  assert.h  bitwise.h  bucket_allocator.h  cache_allocator.h  derived.h  memory.cpp  memory.h  object_container.h  overloaded.h  preprocessor.h  scoped_guard.h  selective_iterator.h  test_allocator.cpp  test_allocator.h  transform_iterator.h  type_traits.h  utility.h  vector.h  zip.h  zipper.h
test/jkutil_tests/: CMakeLists.txt  aligned.cpp  allocator.cpp  array_proxy.cpp  bitwise.cpp  derived.cpp  scoped_guard.cpp  selective_iterator.cpp  transform_iterator.cpp
